--- a/vercel.json
+++ b/vercel.json
@@ -18,6 +18,11 @@
       "methods": ["POST"]
     },
     {
+      "src": "/api/chat/polling",
+      "dest": "src/index.ts",
+      "methods": ["POST"]
+    },
+    {
       "src": "/api/chat/session",
       "dest": "src/index.ts",
       "methods": ["POST"]
