--- a/package.json
+++ b/package.json
@@ -10,17 +10,18 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.49.1",
+    "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "ws": "^8.14.2",
-    "cors": "^2.8.5"
+    "ws": "^8.14.2"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/node": "^20.10.4",
     "@types/ws": "^8.5.10",
-    "@types/cors": "^2.8.17",
     "ts-node": "^10.9.1",
     "typescript": "^5.3.2"
   }
-} 
+}
