--- a/vercel.json
+++ b/vercel.json
@@ -23,6 +23,11 @@
       "methods": ["POST"]
     },
     {
+      "src": "/api/jobs/(?<jobId>[^/]+)",
+      "dest": "src/index.ts",
+      "methods": ["GET"]
+    },
+    {
       "src": "/api/chat/session",
       "dest": "src/index.ts",
       "methods": ["POST"]
